--- a/html-css/aula011/css/estilo.css
+++ b/html-css/aula011/css/estilo.css
@@ -1,19 +1,27 @@
+ *{
+  margin: 0;
+  padding: 0;
+ }
  body{
         background-color: rgb(63, 60, 66);
       }
       h2{
         text-align: center;
         color: aliceblue;
+        margin: 5px;
       }
       p {
         color: rgb(178, 181, 201);
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        margin: 5px;
       }
       .subtitulo {
+        text-align: center;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-style: italic;
         color: black;
         background-color: rgb(15, 196, 54);
         border-radius: 10px;
+        margin: 5px;
         padding: 5px;
       }
